# uavs_fleet_system

./: README.md
src/: .tmuxinator.yml
src/install_scripts/: multi_uavs_sim_env.sh
src/px4_swarm_controller/: CMakeLists.txt  package.xml
src/px4_swarm_controller/cmake-modules/: CodeCoverage.cmake
src/px4_swarm_controller/config/: config.yaml  drones.yaml  heart_config.yaml
src/px4_swarm_controller/launch/: integration_test.launch.yaml  px4_multi_sim.launch.py
src/px4_swarm_controller/libs/Control/: CMakeLists.txt  Control.cpp  Control.hpp
src/px4_swarm_controller/scripts/: generate_coverage_report.bash  simulation_node.py
src/px4_swarm_controller/src/: arming.cpp
src/px4_swarm_controller/test/: main.cpp  test.cpp  test_level2.cpp
src/px4_swarm_controller/worlds/: grid_plan.world
src/uav_fleet_gui/: CMakeLists.txt
src/uav_fleet_gui/config/: config.yaml
src/uav_fleet_gui/include/: gis_map_widget.hpp  mainwindow.hpp  uav_control_node.hpp
src/uav_fleet_gui/launch/: gui_with_rosbridge.launch.py
src/uav_fleet_gui/src/: example.py  gis_map_widget.cpp  main.cpp  mainwindow.cpp  uav_control_node.cpp
src/uav_fleet_gui/ui/: mainwindow.ui
